[tool.poetry]
name = "autom_notion_sdk"
version = "0.1.0"
description = "Integrate your Autom with Notion, building next-level softwares without codes."
authors = ["autom_admin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# autom = { git = "git@github.com:NaturaFlex/autom.git", branch = "main" }
autom = { path = "/home/steve/workspace/autom" }

[tool.autom]
qualifier = "autom_notion_sdk"
name = "Autom Notion SDK"
owner_qualifier = "autom_admin"
owner_email = "admin@autom.com"
description = "Integrate your Autom with Notion, building next-level softwares without codes."
python_version = "3.12"
python_version_spec = "^3.12"
publicity = "public"
github_repo_url = "https://github.com/stevieflyer/autom_notion_sdk.git"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"